<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_orders"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_agents"
            android:title="@string/menu_agents" />
        <item
            android:id="@+id/nav_price"
            android:title="@string/menu_price"/>
        <item
            android:id="@+id/nav_calendar"
            android:title="@string/menu_Calendar" />
        <item
            android:id="@+id/nav_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_faq"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />
    </group>
</menu>