<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:id="@+id/mtv_price_title"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:id="@+id/mtv_price"
        android:layout_toEndOf="@+id/mtv_price_title"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@+id/mtv_price"
        android:textSize="10sp"
        android:layout_margin="10dp"
        android:layout_toStartOf="@+id/bt_apply"
        android:id="@+id/bt_cancel"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:textSize="10sp"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/mtv_price"
        android:id="@+id/bt_apply"/>
</RelativeLayout>
