<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_profile_first_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"


        android:layout_height="wrap_content"

        android:layout_margin="10dp"

        android:hint="@string/first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_profile_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="12sp"
           />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_profile_last_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_below="@+id/textField_profile_first_name"

        android:layout_margin="10dp"

        android:hint="@string/last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_profile_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="12sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_profile_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_below="@+id/textField_profile_last_name"

        android:layout_margin="10dp"

        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="12sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_profile_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_below="@+id/textField_profile_email"

        android:layout_margin="10dp"

        android:hint="@string/phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_profile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="12sp"
           />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_below="@+id/textField_profile_phone"

        android:layout_margin="10dp"

        android:hint="@string/address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="12sp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_profile_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_below="@+id/textField_address"

        android:layout_margin="10dp"

        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_profile_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="12sp"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:layout_below="@+id/textField_profile_password"
        android:layout_margin="10dp"
        android:layout_alignParentStart="true"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@+id/textField_profile_password"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>