<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_plastic_price"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"




        android:layout_margin="10dp"

        android:hint="@string/plastic_price_for_kg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_plastic_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="12sp"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_plastic_com"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_below="@+id/textField_plastic_price"

        android:layout_margin="10dp"

        android:hint="@string/plastic_compensation_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_plastic_com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="12sp"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:layout_below="@+id/textField_plastic_com"
        android:layout_margin="10dp"
        android:layout_alignParentStart="true"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@+id/textField_plastic_com"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
