<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activities.sign_up.SignUpSuccessActivity"
android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:layout_marginTop="100dp"

        android:id="@+id/textViewWellDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/well_done"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"



        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/your_profile_is"
        android:textSize="13sp"
        android:layout_margin="20dp"
        android:gravity="center"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWellDone" />

    <ImageView

        android:id="@+id/imageViewIcon"
        android:layout_width="200dp"
        android:layout_height="200dp"

        android:layout_margin="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"

        app:srcCompat="@drawable/sign_up_success" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBackToProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIcon"


        android:layout_margin="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>